make nav bar more responsive / fix overlap issue; add big logo to homepage

--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -87,7 +87,7 @@ html {
 
 body {
   position: relative;
-  min-width: 1133px;
+  min-width: 1000px;
 }
 
 .bl-link {
